# MCP

./: .gitignore  brief.py  gmail.py  gmail_auth.py  notion.py  pyproject.toml  server.py  weather.py
